classDiagram
    TipoUsuario <-- Usuario: tiene
    Usuario <-- DetalleUsuario: tiene
    Usuario <-- Publicacion: crea
    Usuario <-- PedidoDonacion : realiza
    Usuario <-- CalificacionONG: califica
    Usuario <-- Infracciones: tiene
    Usuario <-- TipoONG: configura
    
    Publicacion --o PublicacionEtiqueta: tiene
    PublicacionEtiqueta --> Etiqueta
    Publicacion --> RespuestaPublicacion
    RespuestaPublicacion --> RespuestaPublicacion: respuesta_padre
    
    PedidoDonacion --> PublicacionEtiqueta
    PedidoDonacion --> TipoDonacion
    PedidoDonacion --> Usuario: evaluador_ong
    
    Usuario <-- Ranking
    PedidoDonacion <-- Ranking
    Ranking --> TipoRanking
    
    Infracciones --> TipoInfraccion

    class TipoUsuario{
        +int id_tipo_usuario
        +string tipo_usuario

        +new()
        +get()
        +set()
    }
    note for TipoUsuario "Metodos get, set, new son creados y extendidos a la demas clases"
    
    class Usuario {
        +int id_usuario
        +string nombre
        +string apellido
        +string biografia
        +string email
        -string contrasena
        +int id_tipo_usuario
        +string ubicacion
        +date createdAt

        +conocerTipoUsuario()
        +identificarUsuario()
        +verificarContrasena()
        +reestrablecerContrasena()
        +verificarMail()
        +verificarONG()
        +calificarONG()
        +realizarDonacion()
        +crearPublicacion()
    }
    
    class DetalleUsuario {
        +int id_detalle_usuario
        +int id_usuario
        +boolean email_verified
        +string auth_provider
        +string facebook_id
        +string google_id
        +string profile_picture
        +string twitter_id
        +int puntosActuales
        +date ultima_fecha_actualizacion

        +actualizarPuntos()
        +verificarEmail()
        +configurarOAuth()
    }
    
    class Publicacion {
        +int id_publicacion
        +int id_usuario
        +string titulo
        +string descripcion_publicacion
        +int num_megusta
        +date fecha_publicacion
        +date ultima_fecha_actualizacion
        +string ubicacion

        +conocerUsuario()
        +editarPublicacion()
        +aumentarMeGusta()
        +restarMeGusta()
    }
    
    class Etiqueta {
        +int id_etiqueta
        +string etiqueta

        +getEtiquetas()
        +crearEtiqueta()
    }
    
    class PublicacionEtiqueta {
        +int id_publicacion_etiqueta
        +int id_publicacion
        +int id_etiqueta

        +asignarEtiqueta()
        +removerEtiqueta()
        +obtenerEtiquetas()
    }
    
    class TipoDonacion {
        +int id_tipo_donacion
        +string tipo_donacion
        +string descripcion
        +int puntos

        +calcularPuntos()
        +obtenerTipos()
    }
    
    class PedidoDonacion {
        +int id_pedido
        +int id_publicacion_etiqueta
        +int id_usuario
        +int id_tipo_donacion
        +int cantidad
        +int id_ong_evaluadora
        +string descripcion_voluntariado
        +int horas_donadas
        +string estado_evaluacion
        +int puntos_otorgados
        +date fecha_evaluacion
        +date fecha_donacion

        +conocerUsuario()
        +conocerPublicacion()
        +conocerDonacion()
        +calcularPuntos()
        +evaluarVoluntariado()
        +actualizarEstado()
    }
    
    class CalificacionONG {
        +int id_calificacion
        +int id_ong
        +int id_usuario
        +float puntuacion
        +string comentario
        +date fecha_calificacion

        +calificarONG()
        +obtenerCalificaciones()
        +promediarPuntuacion()
    }
    
    class Infracciones {
        +int id_infraccion
        +int id_usuario
        +string contenido
        +int id_tipo_infraccion
        +date fecha_infraccion
        +date fecha_expiracion

        +registrarInfraccion()
        +verificarExpiración()
        +obtenerHistorial()
    }
    
    class TipoInfraccion {
        +int id_tipo_infraccion
        +string tipo_infraccion
        +string severidad

        +obtenerTipos()
        +calcularSeveridad()
    }
    
    class TipoONG {
        +int id_tipo_ong
        +string grupo_social
        +string necesidad
        +int id_usuario

        +configurarPerfil()
        +obtenerFiltros()
        +actualizarNecesidades()
    }
    
    class RespuestaPublicacion {
        +int id_respuesta
        +int id_respuesta_padre
        +int id_publicacion
        +int id_usuario
        +string mensaje
        +date fecha_respuesta
        +date moderated_at
        +string moderation_status
        +string rejection_reason

        +conocerPublicacion()
        +conocerUsuario()
        +responderRespuesta()
        +moderarRespuesta()
    }
    
    class Ranking{
        +int id_ranking
        +int id_tipo_ranking
        +int id_usuario
        +int puesto
        +int puntos

        +conocerTipoRanking()
        +identificarRanking()
        +calcularPuntos()
        +reordenarPuestos()
    }
    
    class TipoRanking{
        +int id_tipo_ranking
        +string tipo_ranking

        +obtenerTipos()
        +configurarRanking()
    }
